turtleart.triangle.Triangle.scala.error
Compilation error:
Triangle:3: error: '<-' expected but ')' found.
  for (i < 0 to 2) {
                 ^Triangle:7: error: illegal start of simple expression
}
^