turtleart.triangle.Triangle.scala.code
def triangle (length:Double) {
  penDown();
  for (i < 0 to 2) {
    forward(length);
    right(120.0);
  }
}

override def run() {
  right(30.0);
  triangle(200.0);
}